--- a/SurplusFundsEntry/SurplusFundsEntry.csproj
+++ b/SurplusFundsEntry/SurplusFundsEntry.csproj
@@ -65,9 +65,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="DeedsWindow.xaml">
+    <Compile Include="Models\MortgageHistory.cs" />
+    <Compile Include="Windows\TaxWindow.xaml.cs">
+      <DependentUpon>TaxWindow.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Windows\DeedsWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Windows\MortgageWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Settings.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -81,8 +89,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="DeedsWindow.xaml.cs">
+    <Compile Include="Windows\DeedsWindow.xaml.cs">
       <DependentUpon>DeedsWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\MortgageWindow.xaml.cs">
+      <DependentUpon>MortgageWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
@@ -92,6 +103,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="OpenFile.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\TaxWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -164,9 +179,7 @@
   <ItemGroup>
     <Resource Include="1446098209_plus_add_blue.ico" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
